Fix layout spacing.

--- a/web/scss/abstracts/_variables.scss
+++ b/web/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $platinum: rgb(231, 231, 232);
 $red: rgb(255, 83, 61);
 $azure: rgba(214, 239, 255, 1);
 $blue: rgba(164, 222, 249, 1);
+$yellow: rgba(255, 193, 7, 1);
 // #33c3f0
 $gray0: rgba(143, 146, 150, 1);
 $gray1: #bbb;
