--- a/web/scss/layout/_grid.scss
+++ b/web/scss/layout/_grid.scss
@@ -4,10 +4,14 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 95vw;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
+
+  @media (min-width: 1800px) {
+    max-width: 95vw;
+  }
 }
 
 .container--main {
