--- a/web/scss/modules/_toggle.scss
+++ b/web/scss/modules/_toggle.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: flex-start;
   padding-left: 15px;
+  min-height: 34px;
   &.solo-row {
     padding-left: 0;
   }
@@ -17,8 +18,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 40px;
+  height: 20px;
 }
 /* Hide default HTML checkbox */
 .switch input {
@@ -41,10 +42,10 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -56,7 +57,7 @@ input:focus + .slider {
   box-shadow: 0 0 1px $red;
 }
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
