--- a/web/scss/pages/_catalog.scss
+++ b/web/scss/pages/_catalog.scss
@@ -47,7 +47,10 @@
 
 .catalog-tool-container {
   min-height: 80vh;
-  padding: 2rem;
+  padding: 0 0 2rem 0;
+  @media screen and (min-width: 1800px) {
+    padding: 1rem 0 2rem 0;
+  }
 }
 
 .catalog-tool {
@@ -67,7 +70,7 @@
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1800px) {
   .catalog-tool,
   .catalog-summary {
     max-width: 95vw;
@@ -99,6 +102,8 @@
   max-height: 70vh;
   overflow: scroll;
   background-color: $white;
+  border: 1px solid #dee2e6;
+  border-top: 1px solid #fff;
 }
 
 .form-badge {
@@ -118,6 +123,10 @@
   margin: -1rem;
   padding: 1rem;
   margin: -1rem -1rem 0 -1rem;
+}
+
+.plot-col:first-of-type {
+  padding-left: 5px;
 }
 
 .plot-col {
