--- a/web/style.css
+++ b/web/style.css
@@ -365,10 +365,15 @@ pre:first-child {
 .container {
   position: relative;
   width: 100%;
-  max-width: 95vw;
+  max-width: 100vw;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
+}
+@media (min-width: 1800px) {
+  .container {
+    max-width: 95vw;
+  }
 }
 
 .container--main {
@@ -1288,9 +1293,8 @@ span.units::after {
   align-items: center;
 }
 
-.input-group + .input-group {
-  margin-right: 15px;
-  margin-bottom: 1rem;
+.input-group-row:nth-of-type(2) {
+  margin-top: 1rem;
 }
 
 /* Histogram
@@ -1493,6 +1497,7 @@ table#tcat td {
   align-items: center;
   justify-content: flex-start;
   padding-left: 15px;
+  min-height: 34px;
 }
 .switch-row.solo-row {
   padding-left: 0;
@@ -1505,8 +1510,8 @@ table#tcat td {
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 40px;
+  height: 20px;
 }
 
 /* Hide default HTML checkbox */
@@ -1532,10 +1537,10 @@ table#tcat td {
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -1550,9 +1555,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 /* tooltips */
@@ -1627,7 +1632,12 @@ input:checked + .slider:before {
 
 .catalog-tool-container {
   min-height: 80vh;
-  padding: 2rem;
+  padding: 0 0 2rem 0;
+}
+@media screen and (min-width: 1800px) {
+  .catalog-tool-container {
+    padding: 1rem 0 2rem 0;
+  }
 }
 
 .catalog-tool {
@@ -1647,7 +1657,7 @@ input:checked + .slider:before {
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1800px) {
   .catalog-tool,
 .catalog-summary {
     max-width: 95vw;
@@ -1678,6 +1688,8 @@ input:checked + .slider:before {
   max-height: 70vh;
   overflow: scroll;
   background-color: #fefeff;
+  border: 1px solid #dee2e6;
+  border-top: 1px solid #fff;
 }
 
 .form-badge {
@@ -1697,6 +1709,10 @@ input:checked + .slider:before {
   margin: -1rem;
   padding: 1rem;
   margin: -1rem -1rem 0 -1rem;
+}
+
+.plot-col:first-of-type {
+  padding-left: 5px;
 }
 
 .plot-col {
